--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+  }
+}
+
 .card-about-home {
   background: linear-gradient(251.83deg, #d03e4f -34.2%, #fdd100 88.87%);
   display: flex;
@@ -12,5 +29,9 @@
 }
 
 .shadow-button {
-    box-shadow: -6px 6px #000000;
+  box-shadow: -6px 6px #000000;
+}
+
+.acc {
+  list-style-type: decimal;
 }
