--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,5 @@
-@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
-
 
 @tailwind base;
 @tailwind components;
@@ -12,13 +11,13 @@
   @variants responsive {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
-        display: none;
+      display: none;
     }
 
     /* Hide scrollbar for IE, Edge and Firefox */
     .no-scrollbar {
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
     }
   }
 }
@@ -27,6 +26,14 @@ footer {
   background-image: url("../../public/assets/PNG/footerbg.png");
   background-position: center;
   background-size: cover;
+}
+
+b {
+  font-weight: 600;
+}
+
+.top-skor-leaderboard {
+  -webkit-text-stroke: 2px #c7172c;
 }
 
 .card-about-home {
